# exo_python_1

./: .gitignore  bin.py  database.db  erreur.py  fdsfdsf.html  findPoint.py  import.py  liste.py  mystery_number.py  pendu.py  pi.py  soila.py  sqrt.py  test.py
Projet Flask/: app.py  pyproject.toml
Projet Flask/static/src/css/: input.css
Projet Flask/templates/: index.html
UserGenerator/: main.py  user.py
cine_club/: app.py  movie.py
crm/: User.py  crm.py  db.json  main.py
discord_bot/: config  main.py  main_bot.py  main_test.py
exercice/: calculatrice.py  comprehension_liste_sujet.py  comprehensions_liste_exo.py  jeu_de_role.py  liste_course.py  liste_course_alternative  nombre_mystere.py  nombre_mystere_limit.py  trieur_de_fichiers.py  verif_password.py
exo_m2i/: Monstre.py  Perso.py  exemple.py  exo_fichier.py  exo_fichier2.py  fichier.txt  fichierfourni.csv  heritage.py  moyenne.csv  pendu_robot.py  sous_herit.py
part_TableauDeBordDevise/: date_test.py  requirements.txt
part_analyse_chanson/: data_json_13063  data_json_29743  data_json_29743.json  script.py
part_avance/: _json.py  _pathlib.py  annotations_types.py  constante_projet.py  dict.py  exceptions.py  fichier.py  fichier.txt  fonction.py  tri_fichier.py
part_bdd/: bddjson.py  bddsql.py  database.db
part_date/: fuseaux.py  script.py
part_faker/: script.py
part_introduction/: chaine_de_caractères.py  convention_nomage.py  conversion_type.py  format.py  function.py  input.py  loop.py  method_function.py  nombre.py  operateur.py  script_string.py  structure_conditionelle.py  (+2 more)
(+117 files in other folders)
